[gd_scene load_steps=39 format=3 uid="uid://hvb64107ikdd"]

[ext_resource type="Script" uid="uid://gifg73i1qdvn" path="res://Scripts/Enemy/BaseEnemy.gd" id="1_f5siv"]
[ext_resource type="Shader" uid="uid://b4c30p1glu8hd" path="res://Assets/Shaders/Defensive.gdshader" id="2_wvl7v"]
[ext_resource type="Texture2D" uid="uid://cgkegav7u2hbq" path="res://Assets/Characters/Enemy-Ranged.png" id="3_d5a3w"]
[ext_resource type="Script" uid="uid://c7hjp5uyboedw" path="res://Scripts/States/StateMachine.gd" id="4_dhje0"]
[ext_resource type="Texture2D" uid="uid://dg5gqcnpubrrg" path="res://Assets/Characters/Enemy-Bladed.png" id="4_wvl7v"]
[ext_resource type="Script" uid="uid://psmi6sk3ww3n" path="res://Scripts/States/Enemies/EnemyIdle.gd" id="5_kbrrl"]
[ext_resource type="Script" uid="uid://bpcfaqb6cd7cf" path="res://Scripts/States/Enemies/EnemyDeath.gd" id="7_o8rew"]
[ext_resource type="Script" uid="uid://caiha1dpbjn6b" path="res://Scripts/States/Enemies/BladeFollow.gd" id="7_wvl7v"]
[ext_resource type="Script" uid="uid://c0b20pvg8umil" path="res://Scripts/Stats/HealthComponent.gd" id="8_xs5my"]
[ext_resource type="Script" uid="uid://mjr2numl6hk4" path="res://Scripts/Upgrades/HealthUpgrades/HealthAdditiveUpgrade.gd" id="9_btouj"]
[ext_resource type="Script" uid="uid://bh3o63i4jlnmj" path="res://Scripts/Stats/ColorComponent.gd" id="10_7cssk"]
[ext_resource type="PackedScene" uid="uid://c5thomb4wodpp" path="res://Scenes/ObjectHealthBar.tscn" id="11_swftn"]
[ext_resource type="Script" uid="uid://du7l3pmt8akjr" path="res://Scripts/Stats/AttackComponent.gd" id="12_s820q"]
[ext_resource type="AudioStream" uid="uid://dl2umam7vprau" path="res://Assets/Sound/SFX/Boss/Death.mp3" id="14_l72vb"]
[ext_resource type="Script" uid="uid://cb8bbt3n4rf11" path="res://Scripts/Upgrades/AttackUpgrades/SwordAdditiveUpgrade.gd" id="14_wvl7v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ulle7"]
shader = ExtResource("2_wvl7v")
shader_parameter/line_color = Color(0.439216, 0.945098, 0.239216, 1)
shader_parameter/min_thickness = 0.0
shader_parameter/max_thickness = 1.0
shader_parameter/line_thickness = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1jihc"]
atlas = ExtResource("3_d5a3w")
region = Rect2(288, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gltnq"]
atlas = ExtResource("3_d5a3w")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n1ky"]
atlas = ExtResource("3_d5a3w")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq62f"]
atlas = ExtResource("3_d5a3w")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrfxv"]
atlas = ExtResource("3_d5a3w")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0eh4"]
atlas = ExtResource("3_d5a3w")
region = Rect2(408, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5a3w"]
atlas = ExtResource("4_wvl7v")
region = Rect2(240, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhje0"]
atlas = ExtResource("4_wvl7v")
region = Rect2(264, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbrrl"]
atlas = ExtResource("4_wvl7v")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_iboct"]
atlas = ExtResource("4_wvl7v")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8rew"]
atlas = ExtResource("4_wvl7v")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs5my"]
atlas = ExtResource("4_wvl7v")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_btouj"]
atlas = ExtResource("4_wvl7v")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cssk"]
atlas = ExtResource("4_wvl7v")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_swftn"]
atlas = ExtResource("4_wvl7v")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s820q"]
atlas = ExtResource("4_wvl7v")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kov85"]
atlas = ExtResource("4_wvl7v")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l72vb"]
atlas = ExtResource("4_wvl7v")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0hpx"]
atlas = ExtResource("4_wvl7v")
region = Rect2(240, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_4vycq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jihc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gltnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n1ky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq62f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrfxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0eh4")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5a3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhje0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5a3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhje0")
}],
"loop": false,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbrrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iboct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8rew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs5my")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btouj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cssk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swftn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s820q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kov85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l72vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0hpx")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxlqs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ngqsg"]
radius = 93.0054

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_f5siv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ulle7")
sprite_frames = SubResource("SpriteFrames_4vycq")
animation = &"Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vxlqs")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ngqsg")
one_way_collision_margin = 0.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("4_dhje0")
initialState = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "animate")]
script = ExtResource("5_kbrrl")
enemy = NodePath("../..")
animate = NodePath("../../AnimatedSprite2D")

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "animate")]
script = ExtResource("7_wvl7v")
enemy = NodePath("../..")
animate = NodePath("../../AnimatedSprite2D")

[node name="AttackCooldown" type="Timer" parent="StateMachine/Follow"]

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "animate")]
script = ExtResource("7_o8rew")
enemy = NodePath("../..")
animate = NodePath("../../AnimatedSprite2D")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("8_xs5my")

[node name="HealthAdditiveUpgrade" type="Node" parent="HealthComponent"]
script = ExtResource("9_btouj")
baseAdditive = 25.0
metadata/_custom_type_script = "uid://mjr2numl6hk4"

[node name="ColorComponent" type="Node" parent="."]
script = ExtResource("10_7cssk")

[node name="Gun" type="Node2D" parent="."]

[node name="Aiming" type="Marker2D" parent="Gun"]
position = Vector2(15, 0)

[node name="HealthBar" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("11_swftn")]
offset_left = -8.0
offset_top = -14.0
offset_right = -8.0
offset_bottom = -14.0
scale = Vector2(0.110062, 0.110062)
healthComponent = NodePath("../HealthComponent")
metadata/_edit_use_anchors_ = true

[node name="DamageNumberStartinPosition" type="Node2D" parent="."]
position = Vector2(0, -28)

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("12_s820q")
metadata/_custom_type_script = "uid://du7l3pmt8akjr"

[node name="BulletAttackUpgrade" type="Node" parent="AttackComponent"]
script = ExtResource("14_wvl7v")
baseAdditive = 5.0
level = -2
metadata/_custom_type_script = "uid://bg40lfg4qm5j2"

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_l72vb")
volume_db = -7.0
bus = &"SFX"

[connection signal="onDamage" from="." to="StateMachine/Follow" method="_on_base_enemy_on_damage"]
[connection signal="body_entered" from="Area2D" to="StateMachine/Idle" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D" to="StateMachine/Follow" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="StateMachine/Follow/AttackCooldown" to="StateMachine/Follow" method="_on_attack_cooldown_timeout"]
[connection signal="entity_damaged" from="HealthComponent" to="." method="_on_health_component_entity_damaged"]
[connection signal="health_depleted" from="HealthComponent" to="StateMachine/Idle" method="_on_health_component_health_depleted"]
[connection signal="health_depleted" from="HealthComponent" to="StateMachine/Follow" method="_on_health_component_health_depleted"]
